--- a/src/components/AboutSection/about-home.css
+++ b/src/components/AboutSection/about-home.css
@@ -60,7 +60,7 @@
     position: relative;
 }
 .about-img{
-    width: 40rem;
+    width: 45rem;
     height: 40rem;
     position: relative;
     object-fit: contain;
@@ -68,8 +68,8 @@
 }
 .box{
     background-color: #FFAE12;
-    width: 40rem;
-    height: 27rem;
+    width: 45rem;
+    height: 25rem;
     position: absolute;
     right: -3rem;
     bottom: 3rem;
@@ -78,7 +78,12 @@
 
 @media screen and (max-width: 1300px){
     .about-img{
-        height: 30rem;
+        width: 40rem;
+        height: 25rem;
+    }
+    .box{
+        width: 40rem;
+        height: 23rem;
     }
 }
 @media screen and (max-width: 1220px){
@@ -88,8 +93,8 @@
     }
     .box{
         width: 35rem;
-        height: 23rem;
-        top: 1rem;
+        height: 20rem;
+        top: 3rem;
     }
     .about-text{
         font-size: 1rem;
@@ -109,8 +114,8 @@
     }
     .box{
         width: 30rem;
-        height: 20rem;
-        top: 3rem;
+        height: 17rem;
+        top: 4.5rem;
     }
 
     .about-text{
