--- a/src/pages/Events/events-page.css
+++ b/src/pages/Events/events-page.css
@@ -31,12 +31,14 @@
     color: #3088A4;
 }
 .festival-subtitle,
-.wehoops-subtitle
+.wehoops-subtitle,
 .wfcf-subtitle{
     text-transform: uppercase;
     font-weight: 500;
     font-size: .9rem;
+    margin-bottom: 0;
 }
+
 .festival-hr,
 .wehoops-hr,
 .wfcf-hr{
@@ -118,6 +120,7 @@
     width: 5.2rem;
 }
 .event-sponsor-header{
+
     width: 8.5rem;
 }
 .performers-title,
@@ -126,6 +129,7 @@
 .event-sponsor-title{
     font-size: 1.8rem;
     font-weight: 500;
+    margin-bottom: 0;
 }
 .performers-hr,
 .vendors-hr,
@@ -224,7 +228,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url('../../images/background/events.jpg');
+    background-image: url('../../images/background/events.png');
     position: relative;
     z-index: 1;
     padding: 3rem;
