--- a/src/components/CTA/cta.css
+++ b/src/components/CTA/cta.css
@@ -1,5 +1,5 @@
 .cta-container{
-    background-image: url('../../images/background/cta.jpg');
+    background-image: url('../../images/background/cta.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
