--- a/src/components/FooterSection/footer.css
+++ b/src/components/FooterSection/footer.css
@@ -46,6 +46,7 @@
 .footer-list{
     list-style: none;
     margin-bottom: 1rem;
+    font-weight: 500;
 }
 .footer-social-link:hover{
     color: rgb(255, 174, 18);
