--- a/src/components/MissionSection/mission.css
+++ b/src/components/MissionSection/mission.css
@@ -2,60 +2,70 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    width: 68rem;
+    width: 73rem;
     max-width: 100%;
-    margin: 8rem auto;
+    margin: 5rem auto 3rem auto;
     padding: 1.5rem;
 }
 .mission-section{
-    position: relative;
+    display: grid;
+    width: 73rem;
+    height: 100%;
+    grid-template-columns: repeat(2, auto);
+    justify-content: space-between;
+    grid-template-rows: repeat(2, 1fr);
+    /* position: relative; */
 }
 
 .mission{
+    grid-column: 1/3;
     background-color: #3271AA;
 }
 .vision{
+    grid-column: 1/2;
+    grid-row: 2;
     background-color: #AA3232;
 }
 .values{
-    position: absolute;
-    background-color: #D7C529;
+    grid-column: 2/3;
+    grid-row: 2;
+    background-color: #bdb03b;
+    /* position: absolute;
+
     top: 9rem;
-    left: 30rem;
+    left: 30rem; */
 }
-.mission,
-.vision{
-    width: 35rem;
+.mission{
+    width: 70rem;
     max-width: 100%;
-    height: 22rem;
     color: #fff;
     padding: 2rem;
-    margin-bottom: 1rem;
 }
-.values{
+
+.values,
+.vision{
     width: 35rem;
     max-width: 100%;
     height: 25rem;
     color: #fff;
     padding: 2rem;
-    margin-bottom: 1rem;
 }
 .mission-text{
-    width: 25rem;
+    /* width: 25rem; */
     max-width: 100%;
     line-height: 1.8;
     color: #fff;
     font-size: 1.1rem;
 }
 .vision-text{
-    width: 26rem;
+    /* width: 26rem; */
     max-width: 100%;
     line-height: 1.8;
     color: #fff;
     font-size: 1.1rem;
 }
 .values-text{
-    width: 30rem;
+    /* width: 30rem; */
     max-width: 100%;
     line-height: 1.8;
     color: #fff;
@@ -76,34 +86,29 @@
     width: 5rem;
 }
 
-@media screen and (max-width: 1090px) {
+@media screen and (max-width: 1180px) {
     .mission-container{
-        width: 56rem;
+        width: 59rem;
     }
-    .mission,
+    .mission{
+        width: 56rem;
+        max-width: 100%;
+        color: #fff;
+        padding: 2rem;
+    }
+    
+    .values,
     .vision{
         width: 28rem;
         max-width: 100%;
-        height: 22rem;
+        height: 25rem;
         color: #fff;
         padding: 2rem;
-        margin-bottom: 1rem;
-    }
-    .values{
-        width: 28rem;
-        max-width: 100%;
-        height: 23rem;
-        color: #fff;
-        padding: 2rem;
-        margin-bottom: 1rem;
     }
     .mission-text{
-        width: 25rem;
-        max-width: 100%;
-        line-height: 1.8;
-        color: #fff;
         font-size: 1rem;
     }
+
     .vision-text{
         width: 26rem;
         max-width: 100%;
@@ -113,78 +118,66 @@
         width: 30rem;
         font-size: 1rem;
     }  
-    .values{
-        top: 10rem;
-        left: 25rem;
-    }
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 950px) {
     .mission-container{
-        width: 52rem;
+        width: 49rem;
     }
-    .mission,
+    .mission{
+        width: 46rem;
+    }
+    
+    .values,
     .vision{
-        width: 26rem;
-        height: 19rem;
+        width: 23rem;
+        height: 27rem;
     }
-    .values{
-        width: 28rem;
-        height: 22rem;
-    }
-    .mission-text{
-        font-size: .9rem;
-    }
-    .vision-text{
 
-        font-size: .9rem;
-    }
-    .values-text{
-        font-size: .9rem;
-    }  
-    .values{
-        top: 8rem;
-        left: 23rem;
-    }
 }
-@media screen and (max-width: 840px) {
+@media screen and (max-width: 790px) {
     .mission-section{
+        display: flex;
         flex-direction: column;
     }
     .mission-container{
         width: 33rem;
     }
-    .mission,
+    .mission{
+        width: 30rem;
+        height: 100%;
+    }
     .vision{
         width: 30rem;
-        height: 19rem;
+        height: 22rem;
+    }
+    .values{
+        width: 30rem;
+        height: 23rem;
     }
     .mission-text{
         font-size: 1rem;
     }
     .vision-text{
-
         font-size: 1rem;
     }
     .values-text{
         font-size: 1rem;
     }  
-    .values{
-        width: 30rem;
-        height: 23rem;
-        top: 0;
-        left: 0;
-        position: relative;
-    }
+
 }
 @media screen and (max-width: 530px) {
 
     .mission-container{
         width: 29rem;
     }
-    .mission,
-    .vision{
+
+    .vision,
+    .mission{
         width: 26rem;
-        height: 19rem;
+    }
+    .values{
+        width: 26rem;
+        height: 25rem;
     }
     .mission-text{
         font-size: 1rem;
@@ -196,10 +189,7 @@
     .values-text{
         font-size: 1rem;
     }  
-    .values{
-        width: 26rem;
-        height: 24rem;
-    }
+
 }
 @media screen and (max-width: 470px) {
 
@@ -207,10 +197,12 @@
         width: 23rem;
         padding: 1rem;
     }
-    .mission,
+    .mission{
+        width: 21rem; 
+    }
     .vision{
         width: 21rem;
-        height: 19rem;
+
     }
     .values{
         width: 21rem;
