--- a/src/pages/About/about-page.css
+++ b/src/pages/About/about-page.css
@@ -9,7 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url('../../images/background/hero-bg.webp');
+    background-image: url('../../images/background/hero-bg2.png');
     position: relative;
     z-index: 1;
     padding: 3rem;
