Initial files has been updated

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -32,6 +32,7 @@
 }
 
 /* NAV ITEM */
+
 .nav-container{
     display: flex;
     align-items: center;
@@ -41,6 +42,25 @@
     margin: 0 auto;
     padding: 1rem;
 }
+.nav-container.scrolled {
+    background-color: #fff; /* Change background color here */
+    color: #000; /* Optional: Change text color if needed */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for better visibility */
+    position: fixed;
+    top: .5rem;
+    left: 0;
+    width: 100%;
+    height: 6rem;
+    z-index: 3; /* Ensure it stays on top of other elements */
+
+
+}
+.nav-container.scrolled .logo {
+    width: 5rem;
+    height: 5rem;
+}
+/* Update link colors when scrolled */
+
 .nav-item{
     display: flex;
     align-items: center;
@@ -60,6 +80,9 @@
     font-weight: 600;
     display: flex;
     align-items: center;
+}
+.nav-container.scrolled .nav-link {
+    color: #000; /* Adjust link color when scrolled */
 }
 .nav-link:hover{
     color: rgb(255, 174, 18);
@@ -134,6 +157,9 @@
     }
     .nav-item.active .nav-link {
         color: #000; /* Change the text color */
+    }
+    .nav-item.active .close-menu{
+        position: fixed; /* Fix the menu position */
     }
     .nav-item.active {
         position: fixed; /* Fix the menu position */
