--- a/src/components/FooterSection/footer.css
+++ b/src/components/FooterSection/footer.css
@@ -48,6 +48,17 @@
     margin-bottom: 1rem;
     font-weight: 500;
 }
+.footer-phone a,
+.footer-mail a{
+    color: #fff;
+    font-weight: 500;
+    text-decoration: none;
+    transition: all .3s ease;
+}
+.footer-phone a:hover,
+.footer-mail a:hover{
+    color: rgb(255, 174, 18);
+}
 .footer-social-link:hover{
     color: rgb(255, 174, 18);
 }
@@ -87,6 +98,7 @@
     font-size: .8rem;
     margin-bottom: 0;
 }
+
 .copy-link{
     color: rgb(255, 174, 18);
     font-weight: 500;
@@ -145,7 +157,7 @@
 @media screen and (max-width: 870px) {
     .footer-section{
         grid-template-columns: repeat(2, auto);
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 10rem 1fr;
         justify-content: center;
         margin: 1rem auto;
         width: 31rem;
@@ -157,12 +169,13 @@
     .quick-links{
         grid-column: 1/2;
         grid-row: 2;
+        height: 10rem;
     }
 
     .join-link{
         grid-column: 1/2;
         grid-row: 3;
-        height: 8rem;
+        height: 15rem;
     }
     .footer-contact{
         grid-column: 1/2;
@@ -171,7 +184,7 @@
     .join-link{
         grid-column: 2/3;
         grid-row: 2;
-
+        height: 10rem;
     }
     .footer-contact{
         grid-column: 1/2;
@@ -181,7 +194,7 @@
 @media screen and (max-width: 550px) {
     .footer-section{
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 8rem 1fr;
+        grid-template-rows: 1fr 10rem 10rem 1fr;
         margin: 1rem 0;
         width: 42rem;
     }
@@ -192,7 +205,7 @@
     .join-link{
         grid-column: 1/2;
         grid-row: 3;
-        height: 8rem;
+        height: 10rem;
     }
     .footer-contact{
         grid-column: 1/2;
@@ -202,7 +215,7 @@
 @media screen and (max-width: 400px) {
     .footer-section{
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 8rem 1fr;
+        grid-template-rows: 1fr 10rem 10rem 1fr;
         margin: 1rem 0;
         width: 42rem;
     }
@@ -216,7 +229,7 @@
     .join-link{
         grid-column: 1/2;
         grid-row: 3;
-        height: 8rem;
+        height: 10rem;
     }
     .footer-contact{
         grid-column: 1/2;
