--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -110,7 +110,8 @@
     justify-content: center;
 
 }
-.donate-list:hover{
+.donate-list:hover,
+.donate-link:hover{
     background-color: rgb(255, 174, 18);
     width: 11rem;
     height: 2.2rem;
@@ -124,8 +125,13 @@
     color: #fff;
     text-transform: uppercase;
     font-weight: 600;
+    background-color: #3088A4;
+    width: 11rem;
+    height: 2.2rem;
     display: flex;
     align-items: center;
+    justify-content: center;
+
 }
 
 
