--- a/src/pages/Events/events-page.css
+++ b/src/pages/Events/events-page.css
@@ -10,7 +10,14 @@
     padding: 1.5rem;
 }
 .festival-title,
-.wehoops-title,
+.wehoops-title
+{
+    width: 9rem;
+    letter-spacing: 2px;
+    font-weight: 500;
+    margin-bottom: 1rem;
+    font-size: 2.4rem;
+}
 .wfcf-title{
     width: 9rem;
     letter-spacing: 2px;
