--- a/src/components/ServiceList/service-list.css
+++ b/src/components/ServiceList/service-list.css
@@ -31,6 +31,7 @@
     max-width: 100%;
     line-height: 1.8;
     font-size: 1.1rem;
+    text-align: justify;
 
 }
 @media screen and (max-width: 1120px) {
