--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -48,7 +48,7 @@
     color: #000; /* Optional: Change text color if needed */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for better visibility */
     position: fixed;
-    top: .5rem;
+    top: 0;
     left: 0;
     width: 100%;
     height: 6rem;
