--- a/src/pages/Home/home-page.css
+++ b/src/pages/Home/home-page.css
@@ -1,7 +1,9 @@
 .home-hr{
-    width: 90rem;
+    width: 80rem;
     max-width: 100%;
     margin: 0 auto;
+    border: 2px solid #3088A4;
+    border-bottom: 0;
 }
 
 /* FUNDERS AND SPONSORS SECTION */
