--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -141,7 +141,7 @@ form{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 3.5rem;
+    height: auto;
 }
 .contact-detail-title{
     text-transform: uppercase;
@@ -149,6 +149,9 @@ form{
     font-size: 1.35rem;
     color: var(--primary-black);
 
+}
+p {
+    margin-bottom: 0;
 }
 .contact-detail-text{
     color: var(--text-color);
