--- a/src/components/MemberList/member.css
+++ b/src/components/MemberList/member.css
@@ -33,36 +33,50 @@
     padding: 2rem;
 }
 .member-one{
-    grid-column: 1/2;
+    grid-column: 2/4;
     grid-row: 1;
+    width: 20rem;
+    margin: 0 auto;
 }
 .member-two{
-    grid-column: 1/2;
-    grid-row: 2;
-}
-.member-three{
     grid-column: 2/3;
     grid-row: 2;
+    width: 20rem;
+    margin: 0 auto;
 }
-.member-four{
+.member-three{
     grid-column: 3/4;
     grid-row: 2;
+    width: 20rem;
+    margin: 0 auto;
 }
+/* .member-four{
+    grid-column: 3/4;
+    grid-row: 2;
+} */
 .member-five{
     grid-column: 1/2;
     grid-row: 3;
+    width: 20rem;
+    margin: 0 auto;
 }
 .member-six{
     grid-column: 2/3;
     grid-row: 3;
+    width: 20rem;
+    margin: 0 auto;
 }
 .member-seven{
     grid-column: 3/4;
     grid-row: 3;
+    width: 20rem;
+    margin: 0 auto;
 }
 .member-eight{
     grid-column: 4/5;
     grid-row: 3;
+    width: 20rem;
+    margin: 0 auto;
 }
 .member-img{
     width: 20rem;
@@ -71,9 +85,63 @@
 }
 
 @media screen and (max-width: 1380px) {
+    .member-list-section{
+    width:  65rem;
+
+    justify-content: space-between;
+    grid-template-columns: repeat(3, auto);
+
+}
     .member-img{
         width: 18rem;
         height: 23rem;
+    }
+    .member-one{
+        grid-column: 2/3;
+        grid-row: 1;
+        width: 18rem;
+        margin: 0 auto;
+    }
+    .member-two{
+        grid-column: 1/3;
+        grid-row: 2;
+        width: 18rem;
+        margin: 0 auto;
+    }
+    .member-three{
+        grid-column: 2/4;
+        grid-row: 2;
+        width: 18rem;
+        margin: 0 auto;
+    }
+    /* .member-four{
+        grid-column: 2/4;
+        grid-row: 2;
+
+    } */
+    .member-five{
+        grid-column: 1/2;
+        grid-row: 3;
+        width: 18rem;
+        margin: 0 auto;
+    }
+    .member-six{
+        grid-column: 2/3;
+        grid-row: 3;
+        width: 18rem;
+        margin: 0 auto;
+    }
+    .member-seven{
+        grid-column: 3/4;
+        grid-row: 3;
+        width: 18rem;
+        margin: 0 auto;
+    }
+    .member-eight{
+        grid-column: 1/2;
+        grid-row: 4;
+        width: 18rem;
+        margin: 0 auto;
     }
 }
 @media screen and (max-width: 1270px) {
@@ -84,55 +152,72 @@
 }
 @media screen and (max-width: 1150px) {
     .member-list-section{
-        grid-template-columns: repeat(3, auto);
+        grid-template-columns: repeat(2, auto);
         grid-template-rows: repeat(4, 1fr);
-        width:  90rem;
+        width:  60rem;
     }
     .member-img{
         width: 16rem;
         height: 21rem;
     }
     .member-one{
-        grid-column: 1/2;
+        grid-column: 2/3;
         grid-row: 1;
+        width: 16rem;
+        margin: 0 auto;
     }
     .member-two{
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 2;
+        width: 16rem;
+        margin: 0 auto;
     }
     .member-three{
-        grid-column: 2/3;
+        grid-column: 2/4;
         grid-row: 2;
+        width: 16rem;
+        margin: 0 auto;
     }
-    .member-four{
-        grid-column: 3/4;
+    /* .member-four{
+        grid-column: 2/4;
         grid-row: 2;
-    }
+
+    } */
     .member-five{
         grid-column: 1/2;
         grid-row: 3;
+        width: 16rem;
+        margin: 0 auto;
     }
     .member-six{
         grid-column: 2/3;
         grid-row: 3;
+        width: 16rem;
+        margin: 0 auto;
     }
     .member-seven{
         grid-column: 3/4;
         grid-row: 3;
+        width: 16rem;
+        margin: 0 auto;
     }
     .member-eight{
         grid-column: 1/2;
         grid-row: 4;
+        width: 16rem;
+        margin: 0 auto;
     }
 }
 @media screen and (max-width: 870px) {
     .member-list-section{
         grid-template-columns: repeat(2, auto);
-        grid-template-rows: repeat(5, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        width: 40rem;
+
     }
 
     .member-one{
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 1;
     }
     .member-two{
@@ -143,25 +228,25 @@
         grid-column: 2/3;
         grid-row: 2;
     }
-    .member-four{
+    /* .member-four{
         grid-column: 1/2;
         grid-row: 3;
-    }
+    } */
     .member-five{
-        grid-column: 2/3;
+        grid-column: 1/2;
         grid-row: 3;
     }
     .member-six{
-        grid-column: 1/2;
-        grid-row: 4;
+        grid-column: 2/3;
+        grid-row: 3;
     }
     .member-seven{
-        grid-column: 2/3;
+        grid-column: 1/2;
         grid-row: 4;
     }
     .member-eight{
-        grid-column: 1/2;
-        grid-row: 5;
+        grid-column: 2/3;
+        grid-row: 4;
     }
     .member-img{
         width: 19rem;
@@ -177,7 +262,7 @@
 @media screen and (max-width: 590px) {
     .member-list-section{
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(8, 1fr);
+        grid-template-rows: repeat(7, 1fr);
         width: 26rem;
     }
     .member-list-header{
@@ -209,34 +294,43 @@
     .member-one{
         grid-column: 1/2;
         grid-row: 1;
+        width: 22rem;
     }
     .member-two{
         grid-column: 1/2;
         grid-row: 2;
+        width: 22rem;
     }
     .member-three{
         grid-column: 1/2;
         grid-row: 3;
+        width: 22rem;
     }
-    .member-four{
+    /* .member-four{
         grid-column: 1/2;
         grid-row: 4;
-    }
+    } */
+
+
     .member-five{
         grid-column: 1/2;
         grid-row: 5;
+        width: 22rem;
     }
     .member-six{
         grid-column: 1/2;
         grid-row: 6;
+        width: 22rem;
     }
     .member-seven{
         grid-column: 1/2;
         grid-row: 7;
+        width: 22rem;
     }
     .member-eight{
         grid-column: 1/2;
         grid-row: 8;
+        width: 22rem;
     }
 
 
@@ -269,14 +363,50 @@
 @media screen and (max-width: 420px) {
     .member-list-section{
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(8, 1fr);
-        width: 22rem;
+        grid-template-rows: repeat(7, 1fr);
+        width: 24rem;
         padding: 1rem;
     }
 
     .member-img{
         width: 20rem;
         height: 25rem;
+    }
+    .member-one{
+        grid-column: 1/2;
+        grid-row: 1;
+        width: 20rem;
+    }
+    .member-two{
+        grid-column: 1/2;
+        grid-row: 2;
+        width: 20rem;
+    }
+    .member-three{
+        grid-column: 1/2;
+        grid-row: 3;
+        width: 20rem;
+    }
+
+    .member-five{
+        grid-column: 1/2;
+        grid-row: 4;
+        width: 20rem;
+    }
+    .member-six{
+        grid-column: 1/2;
+        grid-row: 5;
+        width: 20rem;
+    }
+    .member-seven{
+        grid-column: 1/2;
+        grid-row: 6;
+        width: 20rem;
+    }
+    .member-eight{
+        grid-column: 1/2;
+        grid-row: 7;
+        width: 20rem;
     }
 
 }
