--- a/src/components/ServicesSection/service.css
+++ b/src/components/ServicesSection/service.css
@@ -38,7 +38,7 @@
 
 
 .box-one{
-    background-image: url('../../images/services/service1.jpg');
+    background-image: url('../../images/services/Digital Literacy.jpg');
 }
 .box-two{
     background-image: url('../../images/services/service2.jpg');
