--- a/src/pages/Home/home-page.css
+++ b/src/pages/Home/home-page.css
@@ -106,6 +106,10 @@
 .sponsor-logo:hover{
     transform: scale(1.1);
 }
+/* ADVERTISEMENT HOME */
+.advertisement-home-img{
+    width: 100%;
+}
 /* DONATION SECTION */
 /* 
 .donation-section{
