--- a/src/components/MemberList/member.css
+++ b/src/components/MemberList/member.css
@@ -23,29 +23,29 @@
 }
 .member-list-section{
     display: grid;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(3, 1fr);
     justify-content: space-between;
-    width:  90rem;
+    width:  80rem;
     max-width: 100%;
     margin: 3rem auto;
     row-gap: 3rem;
     padding: 2rem;
 }
 .member-one{
-    grid-column: 2/4;
+    grid-column: 1/4;
     grid-row: 1;
     width: 20rem;
     margin: 0 auto;
 }
 .member-two{
-    grid-column: 2/3;
+    grid-column: 1/3;
     grid-row: 2;
     width: 20rem;
     margin: 0 auto;
 }
 .member-three{
-    grid-column: 3/4;
+    grid-column: 2/4;
     grid-row: 2;
     width: 20rem;
     margin: 0 auto;
@@ -60,20 +60,20 @@
     width: 20rem;
     margin: 0 auto;
 }
-.member-six{
+/* .member-six{
+    grid-column: 2/3;
+    grid-row: 3;
+    width: 20rem;
+    margin: 0 auto;
+} */
+.member-seven{
     grid-column: 2/3;
     grid-row: 3;
     width: 20rem;
     margin: 0 auto;
 }
-.member-seven{
-    grid-column: 3/4;
-    grid-row: 3;
-    width: 20rem;
-    margin: 0 auto;
-}
 .member-eight{
-    grid-column: 4/5;
+    grid-column: 3/4;
     grid-row: 3;
     width: 20rem;
     margin: 0 auto;
@@ -125,21 +125,21 @@
         width: 18rem;
         margin: 0 auto;
     }
-    .member-six{
+    /* .member-six{
+        grid-column: 1/2;
+        grid-row: 3;
+        width: 18rem;
+        margin: 0 auto;
+    } */
+    .member-seven{
         grid-column: 2/3;
         grid-row: 3;
         width: 18rem;
         margin: 0 auto;
     }
-    .member-seven{
+    .member-eight{
         grid-column: 3/4;
         grid-row: 3;
-        width: 18rem;
-        margin: 0 auto;
-    }
-    .member-eight{
-        grid-column: 1/2;
-        grid-row: 4;
         width: 18rem;
         margin: 0 auto;
     }
@@ -153,7 +153,7 @@
 @media screen and (max-width: 1150px) {
     .member-list-section{
         grid-template-columns: repeat(2, auto);
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
         width:  60rem;
     }
     .member-img{
@@ -189,21 +189,21 @@
         width: 16rem;
         margin: 0 auto;
     }
-    .member-six{
+    /* .member-six{
+        grid-column: 1/2;
+        grid-row: 3;
+        width: 16rem;
+        margin: 0 auto;
+    } */
+    .member-seven{
         grid-column: 2/3;
         grid-row: 3;
         width: 16rem;
         margin: 0 auto;
     }
-    .member-seven{
+    .member-eight{
         grid-column: 3/4;
         grid-row: 3;
-        width: 16rem;
-        margin: 0 auto;
-    }
-    .member-eight{
-        grid-column: 1/2;
-        grid-row: 4;
         width: 16rem;
         margin: 0 auto;
     }
@@ -236,16 +236,16 @@
         grid-column: 1/2;
         grid-row: 3;
     }
-    .member-six{
+    /* .member-six{
+        grid-column: 2/3;
+        grid-row: 3;
+    } */
+    .member-seven{
         grid-column: 2/3;
         grid-row: 3;
     }
-    .member-seven{
-        grid-column: 1/2;
-        grid-row: 4;
-    }
     .member-eight{
-        grid-column: 2/3;
+        grid-column: 1/2;
         grid-row: 4;
     }
     .member-img{
@@ -262,7 +262,7 @@
 @media screen and (max-width: 590px) {
     .member-list-section{
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(7, 1fr);
+        grid-template-rows: repeat(6, auto);
         width: 26rem;
     }
     .member-list-header{
@@ -314,22 +314,22 @@
 
     .member-five{
         grid-column: 1/2;
-        grid-row: 5;
+        grid-row: 4;
         width: 22rem;
     }
-    .member-six{
+    /* .member-six{
         grid-column: 1/2;
         grid-row: 6;
         width: 22rem;
-    }
+    } */
     .member-seven{
         grid-column: 1/2;
-        grid-row: 7;
+        grid-row: 5;
         width: 22rem;
     }
     .member-eight{
         grid-column: 1/2;
-        grid-row: 8;
+        grid-row: 6;
         width: 22rem;
     }
 
@@ -363,7 +363,6 @@
 @media screen and (max-width: 420px) {
     .member-list-section{
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(7, 1fr);
         width: 24rem;
         padding: 1rem;
     }
@@ -393,19 +392,19 @@
         grid-row: 4;
         width: 20rem;
     }
-    .member-six{
+    /* .member-six{
+        grid-column: 1/2;
+        grid-row: 5;
+        width: 20rem;
+    } */
+    .member-seven{
         grid-column: 1/2;
         grid-row: 5;
         width: 20rem;
     }
-    .member-seven{
-        grid-column: 1/2;
-        grid-row: 6;
-        width: 20rem;
-    }
     .member-eight{
         grid-column: 1/2;
-        grid-row: 7;
+        grid-row: 6;
         width: 20rem;
     }
 
