--- a/src/components/SliderCarousel/slider.css
+++ b/src/components/SliderCarousel/slider.css
@@ -1,16 +1,19 @@
 .slider {
-    margin:0 20px;
+    margin: 0 1.2rem;
     overflow:"hidden";
     padding:2rem 0;
   }
-  
+   .slider .heritage-img{
+    width: 100% ;
+    height: 30rem;
+  }
   .slider img {
     width: 100%;
     max-width: 100%;
-    height: 45rem;
+    height: 35rem;
     object-fit: cover;
   }
-  
+
   .react-multi-carousel-list {
     padding: 0rem 0 2rem 0;
   }
@@ -28,7 +31,19 @@
   }
 
   @media screen and (max-width: 500px) {
+    .slider .heritage-img{
+    width: 90vw ;
+    height: 90vw;
+  }
     .slider img {
-      height: 25rem;
+      height:25rem;
     }
+
+  }
+    @media screen and (max-width: 400px) {
+
+    .slider img {
+      height: 22rem;
+    }
+
   }
