--- a/src/pages/Events/Modal/modal.css
+++ b/src/pages/Events/Modal/modal.css
@@ -17,8 +17,8 @@
     padding: 20px;
     border-radius: 8px;
     position: relative;
-    width: 50rem;
-    height: 60rem;
+    width: 40rem;
+    height: 50rem;
     max-width: 100%;
     overflow-y: auto;
   }
@@ -34,8 +34,8 @@
   }
   @media screen and (max-width: 800px) {
     .modal-content {
-      width: 30rem;
-      height: 40rem;
+      width: 40rem;
+
     }
 
   }
@@ -43,7 +43,14 @@
   @media screen and (max-width: 500px) {
     .modal-content {
       width: 25rem;
-      height: 40rem;
+      height: 38rem;
+    }
+
+  }
+    @media screen and (max-width: 400px) {
+    .modal-content {
+      width: 25rem;
+      height: 35rem;
     }
 
   }
