--- a/src/components/ServicesSection/service.css
+++ b/src/components/ServicesSection/service.css
@@ -38,19 +38,19 @@
 
 
 .box-one{
-    background-image: url('../../images/services/Digital Literacy.jpg');
+    background-image: url('../../images/services/Digital.png');
 }
 .box-two{
-    background-image: url('../../images/services/service2.jpg');
+    background-image: url('../../images/services/employment.png');
 }
 .box-three{
-    background-image: url('../../images/services/service3.jpg');
+    background-image: url('../../images/services/youth-adult.png');
 }
 .box-four{
-    background-image: url('../../images/services/service4.jpg');
+    background-image: url('../../images/services/community.png');
 }
 .box-five{
-    background-image: url('../../images/services/service7.jpg');
+    background-image: url('../../images/services/tutorial.png');
 }
 .box-six{
     background-image: url('../../images/services/service6.png');
