--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body{
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currently
   supported by Chrome, Edge, Opera and Firefox */
-
+  scroll-behavior: smooth;
 
 }
 p{
@@ -36,8 +36,9 @@ ul{
 @media screen and (max-width: 2000px){
   html, body{
       width: 100%;
+      height: 100%;
       margin: 0;
       padding: 0;
-      overflow-x: hidden;
+
   }
 }
