--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -11,16 +11,16 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 24rem;
+    width: 21rem;
     max-width: 100%; 
 }
 .logo{
-    width: 9rem;
-    height: 9rem;
+    width: 6rem;
+    height: 6rem;
 }
 .logo-two{
-    width: 9rem;
-    height: 9rem;
+    width: 6rem;
+    height: 6rem;
 }
 .logo-text{
     font-size: 1.1rem;
@@ -41,40 +41,41 @@
 
 /* NAV ITEM */
 
-.nav-container{
+.nav-main{
+    background-color: #fff;
     display: flex;
     align-items: center;
+    height: 6.2rem;
     justify-content: space-between;
-    width: 110rem;
-    max-width: 100%;
-    margin: 0 auto;
     padding: 1rem;
-}
-.nav-container.scrolled {
-    background-color: #fff; /* Change background color here */
-    color: #000; /* Optional: Change text color if needed */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for better visibility */
-    position: fixed;
+    position: sticky;
     top: 0;
-    left: 0;
-    width: 100%;
-    height: 6rem;
-    z-index: 3; /* Ensure it stays on top of other elements */
-
+    z-index: 9999;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.nav-main.sticky {
+  transition: all .3s ease;
+  height: 6.5rem;
+      position: sticky;
+    top: 0;
+    z-index: 9999;
 
 }
-.nav-container.scrolled .logo {
-    width: 5rem;
+.nav-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100rem;
     height: 5rem;
+    margin: 0 auto;
+    max-width: 100%;    
+    font-family: var(--main-font);
+    line-height: inherit;
+    font-weight: 500;
+    font-style: inherit;
+    transition: all 0.3s ease;
 }
 
-.nav-container.scrolled .logo-two {
-    width: 6rem;
-    height: 6rem;
-}
-.nav-container.scrolled .nav-logo-two{
-    width: 20rem;
-}
 /* Update link colors when scrolled */
 
 .nav-item{
