--- a/src/pages/About/about-page.css
+++ b/src/pages/About/about-page.css
@@ -222,6 +222,9 @@
     .about-page-text{
         width: 22rem;
     }
+    .about-title{
+        font-size: 10vw;
+    }
 }
 @media screen and (max-width: 387px) {
     .about-page-section{
