--- a/src/components/ServiceList/service-list.css
+++ b/src/components/ServiceList/service-list.css
@@ -64,6 +64,22 @@
     line-height: 1.8;
     font-size: 1rem;
 }
+.services-book{
+    width: 13rem;
+    height: 2.8rem;
+    border: none;
+    text-transform: uppercase;
+    font-size: .9rem;
+    font-weight: 600;
+    cursor: pointer;
+    background-color: #3088A4;
+    color: #fff;
+    margin-top: .5rem;
+    transition: all .3s ease;
+}
+.services-book:hover{
+    width: 14rem;
+}
 
 /* @media screen and (max-width: 1180px) {
     .service-content{
