--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,13 @@
   padding: 0;
   margin: 0;
   font-family: var(--main-font);
+    -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+  supported by Chrome, Edge, Opera and Firefox */
   
 }
 html {
@@ -23,7 +30,6 @@ body{
   user-select: none; /* Non-prefixed version, currently
   supported by Chrome, Edge, Opera and Firefox */
   scroll-behavior: smooth;
-
 }
 p{
   margin-bottom: 0;
@@ -40,5 +46,6 @@ ul{
       margin: 0;
       padding: 0;
       /* overflow-x: hidden; */
+
   }
 }
