--- a/src/components/MemberList/member.css
+++ b/src/components/MemberList/member.css
@@ -23,29 +23,29 @@
 }
 .member-list-section{
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(2, auto);
     grid-template-rows: repeat(3, 1fr);
     justify-content: space-between;
-    width:  80rem;
+    width:  50rem;
     max-width: 100%;
     margin: 3rem auto;
     row-gap: 3rem;
     padding: 2rem;
 }
 .member-one{
-    grid-column: 1/4;
+    grid-column: 1/3;
     grid-row: 1;
     width: 20rem;
     margin: 0 auto;
 }
 .member-two{
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: 2;
     width: 20rem;
     margin: 0 auto;
 }
 .member-three{
-    grid-column: 2/4;
+    grid-column: 2/3;
     grid-row: 2;
     width: 20rem;
     margin: 0 auto;
@@ -54,12 +54,12 @@
     grid-column: 3/4;
     grid-row: 2;
 } */
-.member-five{
+/* .member-five{
     grid-column: 1/2;
     grid-row: 3;
     width: 20rem;
     margin: 0 auto;
-}
+} */
 /* .member-six{
     grid-column: 2/3;
     grid-row: 3;
@@ -67,13 +67,13 @@
     margin: 0 auto;
 } */
 .member-seven{
-    grid-column: 2/3;
+    grid-column: 1/2;
     grid-row: 3;
     width: 20rem;
     margin: 0 auto;
 }
 .member-eight{
-    grid-column: 3/4;
+    grid-column: 2/3;
     grid-row: 3;
     width: 20rem;
     margin: 0 auto;
@@ -84,186 +84,13 @@
     object-fit: cover;
 }
 
-@media screen and (max-width: 1380px) {
-    .member-list-section{
-    width:  65rem;
 
-    justify-content: space-between;
-    grid-template-columns: repeat(3, auto);
 
-}
-    .member-img{
-        width: 18rem;
-        height: 23rem;
-    }
-    .member-one{
-        grid-column: 2/3;
-        grid-row: 1;
-        width: 18rem;
-        margin: 0 auto;
-    }
-    .member-two{
-        grid-column: 1/3;
-        grid-row: 2;
-        width: 18rem;
-        margin: 0 auto;
-    }
-    .member-three{
-        grid-column: 2/4;
-        grid-row: 2;
-        width: 18rem;
-        margin: 0 auto;
-    }
-    /* .member-four{
-        grid-column: 2/4;
-        grid-row: 2;
-
-    } */
-    .member-five{
-        grid-column: 1/2;
-        grid-row: 3;
-        width: 18rem;
-        margin: 0 auto;
-    }
-    /* .member-six{
-        grid-column: 1/2;
-        grid-row: 3;
-        width: 18rem;
-        margin: 0 auto;
-    } */
-    .member-seven{
-        grid-column: 2/3;
-        grid-row: 3;
-        width: 18rem;
-        margin: 0 auto;
-    }
-    .member-eight{
-        grid-column: 3/4;
-        grid-row: 3;
-        width: 18rem;
-        margin: 0 auto;
-    }
-}
-@media screen and (max-width: 1270px) {
-    .member-img{
-        width: 16rem;
-        height: 21rem;
-    }
-}
-@media screen and (max-width: 1150px) {
-    .member-list-section{
-        grid-template-columns: repeat(2, auto);
-        grid-template-rows: repeat(3, 1fr);
-        width:  60rem;
-    }
-    .member-img{
-        width: 16rem;
-        height: 21rem;
-    }
-    .member-one{
-        grid-column: 2/3;
-        grid-row: 1;
-        width: 16rem;
-        margin: 0 auto;
-    }
-    .member-two{
-        grid-column: 1/3;
-        grid-row: 2;
-        width: 16rem;
-        margin: 0 auto;
-    }
-    .member-three{
-        grid-column: 2/4;
-        grid-row: 2;
-        width: 16rem;
-        margin: 0 auto;
-    }
-    /* .member-four{
-        grid-column: 2/4;
-        grid-row: 2;
-
-    } */
-    .member-five{
-        grid-column: 1/2;
-        grid-row: 3;
-        width: 16rem;
-        margin: 0 auto;
-    }
-    /* .member-six{
-        grid-column: 1/2;
-        grid-row: 3;
-        width: 16rem;
-        margin: 0 auto;
-    } */
-    .member-seven{
-        grid-column: 2/3;
-        grid-row: 3;
-        width: 16rem;
-        margin: 0 auto;
-    }
-    .member-eight{
-        grid-column: 3/4;
-        grid-row: 3;
-        width: 16rem;
-        margin: 0 auto;
-    }
-}
-@media screen and (max-width: 870px) {
-    .member-list-section{
-        grid-template-columns: repeat(2, auto);
-        grid-template-rows: repeat(4, 1fr);
-        width: 40rem;
-
-    }
-
-    .member-one{
-        grid-column: 1/3;
-        grid-row: 1;
-    }
-    .member-two{
-        grid-column: 1/2;
-        grid-row: 2;
-    }
-    .member-three{
-        grid-column: 2/3;
-        grid-row: 2;
-    }
-    /* .member-four{
-        grid-column: 1/2;
-        grid-row: 3;
-    } */
-    .member-five{
-        grid-column: 1/2;
-        grid-row: 3;
-    }
-    /* .member-six{
-        grid-column: 2/3;
-        grid-row: 3;
-    } */
-    .member-seven{
-        grid-column: 2/3;
-        grid-row: 3;
-    }
-    .member-eight{
-        grid-column: 1/2;
-        grid-row: 4;
-    }
-    .member-img{
-        width: 19rem;
-        height: 23rem;
-    }
-}
-@media screen and (max-width: 870px) {
-    .member-img{
-        width: 16rem;
-        height: 21rem;
-    }
-}
-@media screen and (max-width: 590px) {
+@media screen and (max-width: 740px) {
     .member-list-section{
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(6, auto);
-        width: 26rem;
+        grid-template-rows: repeat(5, auto);
+        width: 32rem;
     }
     .member-list-header{
         width: 32rem;
@@ -273,7 +100,7 @@
     
     }
     .member-header{
-        width: 28rem;
+        width: 32rem;
         max-width: 100%;
         text-transform: uppercase;
     }
@@ -288,23 +115,23 @@
         border-bottom: 0;
     }
     .member-img{
-        width: 22rem;
+        width: 28rem;
         height: 28rem;
     }
     .member-one{
         grid-column: 1/2;
         grid-row: 1;
-        width: 22rem;
+        width: 28rem;
     }
     .member-two{
         grid-column: 1/2;
         grid-row: 2;
-        width: 22rem;
+        width: 28rem;
     }
     .member-three{
         grid-column: 1/2;
         grid-row: 3;
-        width: 22rem;
+        width: 28rem;
     }
     /* .member-four{
         grid-column: 1/2;
@@ -329,13 +156,13 @@
     }
     .member-eight{
         grid-column: 1/2;
-        grid-row: 6;
+        grid-row: 5;
         width: 22rem;
     }
 
 
 }
-@media screen and (max-width: 510px) {
+@media screen and (max-width: 520px) {
 
     .member-list-header{
         width: 29rem;
@@ -346,10 +173,46 @@
     .member-title{
         font-size: 1.6rem;
     }
-}
-@media screen and (max-width: 465px) {
+        .member-img{
+        width: 25rem;
+        height: 29rem;
+    }
+        .member-one{
+        grid-column: 1/2;
+        grid-row: 1;
+        width: 25rem;
+    }
+    .member-two{
+        grid-column: 1/2;
+        grid-row: 2;
+        width: 25rem;
+    }
+    .member-three{
+        grid-column: 1/2;
+        grid-row: 3;
+        width: 25rem;
+    }
 
-    .member-list-header{
+
+    /* .member-six{
+        grid-column: 1/2;
+        grid-row: 5;
+        width: 20rem;
+    } */
+    .member-seven{
+        grid-column: 1/2;
+        grid-row: 4;
+        width: 20rem;
+    }
+    .member-eight{
+        grid-column: 1/2;
+        grid-row: 5;
+        width: 20rem;
+    }
+}
+
+@media screen and (max-width: 465px) {
+        .member-list-header{
         width: 25.5rem;
         padding: 0 1rem;
     }
@@ -359,11 +222,8 @@
     .member-title{
         font-size: 1.5rem;
     }
-}
-@media screen and (max-width: 420px) {
     .member-list-section{
         grid-template-columns: 1fr;
-        width: 24rem;
         padding: 1rem;
     }
 
@@ -387,11 +247,7 @@
         width: 20rem;
     }
 
-    .member-five{
-        grid-column: 1/2;
-        grid-row: 4;
-        width: 20rem;
-    }
+
     /* .member-six{
         grid-column: 1/2;
         grid-row: 5;
@@ -399,12 +255,12 @@
     } */
     .member-seven{
         grid-column: 1/2;
-        grid-row: 5;
+        grid-row: 4;
         width: 20rem;
     }
     .member-eight{
         grid-column: 1/2;
-        grid-row: 6;
+        grid-row: 5;
         width: 20rem;
     }
 
