--- a/src/components/MemberList/member.css
+++ b/src/components/MemberList/member.css
@@ -24,145 +24,148 @@
 }
 .member-list-section{
     display: grid;
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(3, 1fr);
     justify-content: space-between;
-    width:  50rem;
+    width:  90rem;
     max-width: 100%;
     margin: 3rem auto;
     row-gap: 3rem;
     padding: 2rem;
 }
-.member-one{
-    grid-column: 1/3;
-    grid-row: 1;
-    width: 20rem;
+.member{
+    width: 26rem;
     margin: 0 auto;
+}
+.member-one{
+    grid-column: 1/4;
+    grid-row: 1;
+
 }
 .member-two{
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 2;
-    width: 20rem;
-    margin: 0 auto;
+
 }
 .member-three{
-    grid-column: 2/3;
+    grid-column: 2/4;
     grid-row: 2;
-    width: 20rem;
-    margin: 0 auto;
+
 }
-/* .member-four{
-    grid-column: 3/4;
-    grid-row: 2;
-} */
-/* .member-five{
-    grid-column: 1/2;
-    grid-row: 3;
-    width: 20rem;
-    margin: 0 auto;
-} */
-/* .member-six{
+.member-six{
     grid-column: 2/3;
     grid-row: 3;
-    width: 20rem;
-    margin: 0 auto;
-} */
+}
 .member-seven{
     grid-column: 1/2;
     grid-row: 3;
-    width: 20rem;
-    margin: 0 auto;
 }
 .member-eight{
-    grid-column: 2/3;
+    grid-column: 3/4;
     grid-row: 3;
-    width: 20rem;
-    margin: 0 auto;
 }
 .member-img{
-    width: 20rem;
-    height: 25rem;
+    width: 26rem;
+    height: 28rem;
     object-fit: cover;
 }
 
+@media screen and (max-width: 1360px){
+.member{
+    width: 25rem;
+    margin: 0 auto;
+}
+.member-img{
+    width: 25rem;
+    height: 100%;
+    object-fit: cover;
+}
+/* .member-list-section{
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, 1fr);
+    justify-content: space-between;
+    width:  100%;
+    max-width: 100%;
+    margin: 3rem auto;
+    row-gap: 3rem;
+    padding: 2rem;
+} */
+}
+@media screen and (max-width: 1300px){
 
-
-@media screen and (max-width: 740px) {
     .member-list-section{
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(5, auto);
-        width: 32rem;
-    }
-    .member-list-header{
-        width: 32rem;
-        max-width: 100%;
-        margin: 0 auto;
-        padding: 0 2rem;
-    
-    }
-    .member-header{
-        width: 32rem;
-        max-width: 100%;
-        text-transform: uppercase;
-    }
-    .member-title{
-        font-size: 1.8rem;
-        font-weight: 500;
-    }
-    .member-hr{
-        color: #000;
-        margin-top: .5rem;
-        border: 2px solid #3088A4;
-        border-bottom: 0;
-    }
-    .member-img{
-        width: 28rem;
-        height: 28rem;
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        grid-template-rows: repeat(4, 1fr);
+        width:  55rem;
     }
     .member-one{
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 1;
-        width: 28rem;
+
     }
     .member-two{
         grid-column: 1/2;
         grid-row: 2;
-        width: 28rem;
+
+    }
+    .member-three{
+        grid-column: 2/3;
+        grid-row: 2;
+
+    }
+    .member-six{
+        grid-column: 2/3;
+        grid-row: 3;
+    }
+    .member-seven{
+        grid-column: 1/2;
+        grid-row: 3;
+    }
+    .member-eight{
+        grid-column: 1/3;
+        grid-row: 4;
+    }
+}
+@media screen and (max-width: 890px){
+
+    .member-list-section{
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6, auto);
+        width: 32rem;
+    }
+    .member-one{
+        grid-column: 1/2;
+        grid-row: 1;
+
+    }
+    .member-two{
+        grid-column: 1/2;
+        grid-row: 2;
+
     }
     .member-three{
         grid-column: 1/2;
         grid-row: 3;
-        width: 28rem;
-    }
-    /* .member-four{
-        grid-column: 1/2;
-        grid-row: 4;
-    } */
 
-
-    .member-five{
-        grid-column: 1/2;
-        grid-row: 4;
-        width: 22rem;
     }
-    /* .member-six{
-        grid-column: 1/2;
-        grid-row: 6;
-        width: 22rem;
-    } */
-    .member-seven{
+    .member-six{
         grid-column: 1/2;
         grid-row: 5;
-        width: 22rem;
+    }
+    .member-seven{
+        grid-column: 1/2;
+        grid-row: 4;
     }
     .member-eight{
         grid-column: 1/2;
-        grid-row: 5;
-        width: 22rem;
+        grid-row: 6;
     }
 
-
 }
+
+
 @media screen and (max-width: 520px) {
 
     .member-list-header{
@@ -174,42 +177,13 @@
     .member-title{
         font-size: 1.6rem;
     }
-        .member-img{
-        width: 25rem;
-        height: 29rem;
-    }
-        .member-one{
-        grid-column: 1/2;
-        grid-row: 1;
+    .member{
         width: 25rem;
     }
-    .member-two{
-        grid-column: 1/2;
-        grid-row: 2;
-        width: 25rem;
-    }
-    .member-three{
-        grid-column: 1/2;
-        grid-row: 3;
+    .member-img{
         width: 25rem;
     }
 
-
-    /* .member-six{
-        grid-column: 1/2;
-        grid-row: 5;
-        width: 20rem;
-    } */
-    .member-seven{
-        grid-column: 1/2;
-        grid-row: 4;
-        width: 20rem;
-    }
-    .member-eight{
-        grid-column: 1/2;
-        grid-row: 5;
-        width: 20rem;
-    }
 }
 
 @media screen and (max-width: 465px) {
@@ -225,45 +199,18 @@
     }
     .member-list-section{
         grid-template-columns: 1fr;
+        width: 25rem;
         padding: 1rem;
+    }
+    .member{
+        width: 22rem;
     }
 
     .member-img{
-        width: 20rem;
-        height: 25rem;
-    }
-    .member-one{
-        grid-column: 1/2;
-        grid-row: 1;
-        width: 20rem;
-    }
-    .member-two{
-        grid-column: 1/2;
-        grid-row: 2;
-        width: 20rem;
-    }
-    .member-three{
-        grid-column: 1/2;
-        grid-row: 3;
-        width: 20rem;
+        width: 22rem;
+        height: 100%;
     }
 
-
-    /* .member-six{
-        grid-column: 1/2;
-        grid-row: 5;
-        width: 20rem;
-    } */
-    .member-seven{
-        grid-column: 1/2;
-        grid-row: 4;
-        width: 20rem;
-    }
-    .member-eight{
-        grid-column: 1/2;
-        grid-row: 5;
-        width: 20rem;
-    }
 
 }
 @media screen and (max-width: 405px) {
@@ -273,21 +220,26 @@
         padding: 0 1rem;
     }
     .member-header{
-        width: 25rem;
+        width:  23.8rem;
     }
     .member-title{
         font-size: 1.4rem;
     }
 }
-@media screen and (max-width: 380px) {
 
-    .member-list-header{
-        width: 22.2rem;
+@media screen and (max-width: 390px) {
+    .member-list-section{
+        grid-template-columns: auto;
+        width: 20rem;
+        padding: 0;
     }
-    .member-header{
-        width: 25rem;
+    .member{
+        width: 20rem;
     }
-    .member-title{
-        font-size: 1.3rem;
+
+    .member-img{
+        width: 20rem;
+        height: 100%;
     }
+
 }
